--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
@@ -25,7 +25,8 @@
     "mongodb": "^6.10.0",
     "pg": "^8.13.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
