--- a/BlogposterCMS/env.sample
+++ b/BlogposterCMS/env.sample
@@ -86,3 +86,6 @@ TRUST_PROXY=loopback
 # Security Notes:
 # - NEVER expose this file publicly.
 # - Replace placeholders with strong, unique values.
+
+# OpenAI
+OPENAI_API_KEY=your_openai_key_here
