--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blogposter_cms",
-  "version": "0.6.0",
+  "version": "0.6.2",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -15,14 +15,16 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "csurf": "^1.2.2",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.1",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
+    "openai": "^5.7.0",
     "pg": "^8.13.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.3",
