--- a/BlogposterCMS/env.sample
+++ b/BlogposterCMS/env.sample
@@ -56,8 +56,8 @@ API_JWT_SECRET=YOUR_API_JWT_SECRET
 API_JWT_EXPIRY=1h
 
 # API Rate Limiting (Requests per window)
-API_RATE_LIMIT_WINDOW=15
-API_RATE_LIMIT_MAX=100
+API_RATE_LIMIT_WINDOW=5
+API_RATE_LIMIT_MAX=500
 
 # Page Rate Limiting (Requests per window)
 PAGE_RATE_LIMIT_WINDOW=15
