refactor: lazy-load builder modules

--- a/BlogposterCMS/apps/plainspace/app.json
+++ b/BlogposterCMS/apps/plainspace/app.json
@@ -2,8 +2,7 @@
   "name": "plainspace",
   "title": "Page Builder",
   "icon": "layout",
-  "entry": "apps/plainspace/index.js",
-  "routes": ["/admin/app/plainspace", "/admin/app/plainspace/:pageId"],
+  "entry": "./index.js",
   "permissions": ["builder.use"],
   "launchable": true
 }
