feat: tag builder apps

--- a/BlogposterCMS/apps/plainspace/app.json
+++ b/BlogposterCMS/apps/plainspace/app.json
@@ -4,5 +4,6 @@
   "icon": "layout",
   "entry": "plainspace",
   "permissions": ["builder.use"],
-  "launchable": true
+  "launchable": true,
+  "tags": ["builder"]
 }
