--- a/BlogposterCMS/env.sample
+++ b/BlogposterCMS/env.sample
@@ -5,6 +5,9 @@ JWT_SECRET=YOUR_SECURE_JWT_SECRET_HERE
 APP_BASE_URL=https://example.com
 # Switch between 'client' and 'server' rendering
 RENDER_MODE=client
+DEV_AUTOLOGIN=false
+DEV_USER=admin
+ALLOW_WEAK_CREDS=
 
 # Database Configuration
 PG_MAIN_DB=your_database_name
