feat: block app launch without required APIs

--- a/BlogposterCMS/apps/designer/app.json
+++ b/BlogposterCMS/apps/designer/app.json
@@ -4,6 +4,11 @@
   "icon": "layout",
   "entry": "designer",
   "permissions": ["builder.use"],
+  "requiredEvents": [
+    "designer.saveDesign",
+    "designer.listDesigns",
+    "designer.getDesign"
+  ],
   "launchable": true,
   "tags": ["builder"]
 }
