--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -32,7 +32,9 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
