--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -6,6 +6,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "jest",
+    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "npm run lint -- --fix",
     "placeholder-parity": "node tests/placeholderParityCheck.js",
     "build": "webpack --mode production"
   },
@@ -35,9 +37,16 @@
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
+    "eslint": "^9.13.0",
+    "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
