feat: implement origin token handling for admin iframe
- Added support for origin tokens in the admin iframe loader to enhance security.
- The iframe now fetches the RSA public key for origin token verification from a specified endpoint.
- Updated the iframe loader to include the origin token in the postMessage communication.
- Removed outdated test file and replaced it with a new TypeScript test suite for origin token handling.
- Updated TypeScript configuration to include jest types for testing.
- Enhanced security documentation to reflect changes in origin token requirements and usage.
- Introduced nodemon configuration for improved development experience.

--- a/BlogposterCMS/env.sample
+++ b/BlogposterCMS/env.sample
@@ -46,6 +46,10 @@ TOKEN_SALT_MEDIUM=TOKEN_SALT_MEDIUM_HERE
 TOKEN_SALT_LOW=TOKEN_SALT_LOW_HERE
 MODULE_SECRET_SALT=MODULE_SECRET_SALT_HERE
 
+# Admin iframe origin whitelist signing keys (escape PEM newlines as \n)
+APP_FRAME_ORIGIN_TOKEN_PRIVATE_KEY=
+APP_FRAME_ORIGIN_TOKEN_PUBLIC_KEY=
+
 # JWT Token Expiry Times
 JWT_EXPIRY_HIGH=24h
 JWT_EXPIRY_MEDIUM=1h
