--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.0",
+    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "babel-jest": "^29.7.0",
@@ -46,7 +47,9 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.1.10",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.4",
     "typescript": "^5.7.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
