--- a/BlogposterCMS/tsconfig.json
+++ b/BlogposterCMS/tsconfig.json
@@ -11,6 +11,10 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "types": [
+      "node",
+      "jest"
+    ],
     "sourceMap": true,
     "outDir": "dist",
     "rootDir": "."
