feat: Implement page rendering logic and TypeScript configuration
- Added `pageRenderer.ts` to handle dynamic widget rendering and layout management for both public and admin lanes.
- Introduced functions for fetching and sanitizing HTML, managing global styles, and rendering static grids.
- Implemented event registration for widgets and debounced event emission for performance optimization.
- Created a new TypeScript configuration file `tsconfig.browser.json` to define compiler options and include relevant files for the project.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@
 public/assets/css/site.css
 public/assets/css/site.css.map
 BlogposterCMS/public/build/
+# Browser modules generated from TypeScript at runtime
+BlogposterCMS/apps/designer/main/pixelGrid.js
+BlogposterCMS/apps/designer/managers/gridManager.js
+BlogposterCMS/mother/modules/widgetManager/publicLoader.js
+BlogposterCMS/public/plainspace/dashboard/pagePicker.js
+BlogposterCMS/public/plainspace/main/canvasGrid.js
+BlogposterCMS/public/plainspace/main/pageRenderer.js
 fix.patch
 commit.diff
 placeholderData.json
