--- a/BlogposterCMS/package.json
+++ b/BlogposterCMS/package.json
@@ -31,9 +31,9 @@
     "pg": "^8.13.1",
     "sanitize-html": "^2.17.0",
     "sqlite3": "^5.1.7",
+    "typescript": "^5.7.2",
     "uuid": "^11.0.3",
-    "xml2js": "^0.6.2",
-    "typescript": "^5.7.2"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -52,6 +52,7 @@
     "nodemon": "^3.1.10",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
